# CppProject

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/: FUNDING.yml
.github/workflows/: macos.yml  release.yml  ubuntu.yml  windows.yml
include/: test.h
src/: main.cpp
